--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <!-- END NAVIGATION STRUCTURE -->
             <div>
                 <div class="main-image">
-                    <img src="./photos/wildebeest2.png" alt="">
+                    <img src="./photos/elephants1.png" alt="">
                 </div>
             </div>
 
