--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <a href="./index.html" class="nav-button">HOME</a>
                 <a href="./about.html" class="nav-button">ABOUT</a>
 
-                <button id="research-drop-one-button" class="nav-button">PROJECTS</button>
+                <a href="#" id="research-drop-one-button" class="nav-button">PROJECTS</a>
                 <div class="research-drop-one" id="research-drop-one">
                     <a href="./project1.html" class="nav-button">Project 1</a>
                     <a href="./project2.html" class="nav-button">Project 2</a>
