--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             </div>
 
             <div class="main-image">
-                <img src="./photos/elephants1.png" alt="">
-            </div>
+    <img id="slideshow" src="./photos/elephants1.png" alt="Slideshow image">
+        </div>
         </div>
         
         <footer class="footer">
