--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
             <div class="main-image">
     <img id="slideshow" src="./photos/elephants1.png" alt="Slideshow image">
         </div>
+
+<div class="dots" id="dots">
+    <!-- dots will be added here by JS -->
+</div>
+
         </div>
         
         <footer class="footer">
