--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
 
                 <a href="#" id="research-drop-one-button" class="nav-button">PROJECTS</a>
                 <div class="research-drop-one" id="research-drop-one">
-                    <a href="./project1.html" class="nav-button">Project 1</a>
-                    <a href="./project2.html" class="nav-button">Project 2</a>
+                    <a href="./human-elephant_conflict.html" class="nav-button">Human-Elephant Conflict</a>
+                    <a href="./ipas.html" class="nav-button">Important Plant Areas</a>
+                    <a href="./eco_rep.html" class="nav-button">Building Representative Protected Areas</a>
+                    <a href="./ethiopia_tradeoffs.html" class="nav-button">Protected Area Trade-Offs</a>
                 </div>
 
                 <a href="./publications.html" class="nav-button">PUBLICATIONS</a>
