--- a/index.html
+++ b/index.html
@@ -21,15 +21,25 @@
                 <a href="./about.html" class="nav-button">ABOUT</a>
 
                 <a href="#" id="research-drop-one-button" class="nav-button">PROJECTS</a>
-                <div class="research-drop-one" id="research-drop-one">
-                    <a href="./human-elephant_conflict.html" class="nav-button">Human-Elephant Conflict</a>
-                    <a href="./ipas.html" class="nav-button">Important Plant Areas</a>
-                    <a href="./eco_rep.html" class="nav-button">Building Representative Protected Areas</a>
-                    <a href="./ethiopia_tradeoffs.html" class="nav-button">Protected Area Trade-Offs</a>
-                </div>
+<div class="research-drop-one" id="research-drop-one">
+    
+    <!-- SPECIES Section -->
+    <div class="sub-section">
+        <p class="sub-heading">SPECIES CONSERVATION </p>
+        <a href="./human-elephant_conflict.html" class="nav-button">Human-Elephant Conflict</a>
+    </div>
+
+    <!-- AREAS Section -->
+    <div class="sub-section">
+        <p class="sub-heading">AREA-BASED CONSERVATION</p>
+        <a href="./ipas.html" class="nav-button">Important Plant Areas</a>
+        <a href="./eco_rep.html" class="nav-button">Building Representative Protected Areas</a>
+        <a href="./ethiopia_tradeoffs.html" class="nav-button">Protected Area Trade-Offs</a>
+    </div>
+</div>
 
                 <a href="./publications.html" class="nav-button">PUBLICATIONS</a>
-                <a href="./contact.html" class="nav-button">CONTACT</a>
+                <a href="mailto:joelangley@email.com" class="nav-button">CONTACT</a>
             </div>
 
             <div class="main-image">
