--- a/index.html
+++ b/index.html
@@ -20,22 +20,23 @@
                 <a href="./index.html" class="nav-button">HOME</a>
                 <a href="./about.html" class="nav-button">ABOUT</a>
 
-                <a href="#" id="research-drop-one-button" class="nav-button">PROJECTS</a>
-<div class="research-drop-one" id="research-drop-one">
-    
-    <!-- SPECIES Section -->
-    <div class="sub-section">
-        <p class="sub-heading">SPECIES CONSERVATION </p>
-        <a href="./human-elephant_conflict.html" class="nav-button">Human-Elephant Conflict</a>
-    </div>
+                <!-- Projects main button -->
+<a href="#" id="projects-button" class="nav-button">PROJECTS</a>
+<div class="dropdown" id="projects-dropdown">
 
-    <!-- AREAS Section -->
-    <div class="sub-section">
-        <p class="sub-heading">AREA-BASED CONSERVATION</p>
-        <a href="./ipas.html" class="nav-button">Important Plant Areas</a>
-        <a href="./eco_rep.html" class="nav-button">Building Representative Protected Areas</a>
-        <a href="./ethiopia_tradeoffs.html" class="nav-button">Protected Area Trade-Offs</a>
-    </div>
+  <!-- Species subheading -->
+  <a href="#" id="species-button" class="nav-button">SPECIES</a>
+  <div class="dropdown" id="species-dropdown">
+      <a href="./human-elephant_conflict.html" class="nav-button">Human-Elephant Conflict</a>
+  </div>
+
+  <!-- Areas subheading -->
+  <a href="#" id="areas-button" class="nav-button">AREAS</a>
+  <div class="dropdown" id="areas-dropdown">
+      <a href="./ipas.html" class="nav-button">Important Plant Areas</a>
+      <a href="./eco_rep.html" class="nav-button">Building Representative Protected Areas</a>
+      <a href="./ethiopia_tradeoffs.html" class="nav-button">Protected Area Trade-Offs</a>
+  </div>
 </div>
 
                 <a href="./publications.html" class="nav-button">PUBLICATIONS</a>
