--- a/index.html
+++ b/index.html
@@ -24,23 +24,21 @@
 <a href="#" id="projects-button" class="nav-button">PROJECTS</a>
 <div class="dropdown" id="projects-dropdown">
 
-  <!-- Species subheading -->
-  <a href="#" id="species-button" class="nav-button">SPECIES</a>
-  <div class="dropdown" id="species-dropdown">
-      <a href="./human-elephant_conflict.html" class="nav-button">Human-Elephant Conflict</a>
-  </div>
-
-  <!-- Areas subheading -->
-  <a href="#" id="areas-button" class="nav-button">AREAS</a>
-  <div class="dropdown" id="areas-dropdown">
-      <a href="./ipas.html" class="nav-button">Important Plant Areas</a>
-      <a href="./eco_rep.html" class="nav-button">Building Representative Protected Areas</a>
-      <a href="./ethiopia_tradeoffs.html" class="nav-button">Protected Area Trade-Offs</a>
+  <!-- Places subheading -->
+  <a href="#" id="places-button" class="nav-button">PLACES</a>
+  <div class="dropdown" id="places-dropdown">
+      <a href="./south_africa.html" class="nav-button">South Africa</a>
+      <a href="./madagascar.html" class="nav-button">Madagascar</a>
+      <a href="./congo.html" class="nav-button">Congo Basin</a>
+      <a href="./ethiopia.html" class="nav-button">Ethiopia</a>
+      <a href="./sierra_leone.html" class="nav-button">Sierra Leone</a>
+      <a href="./united_kingdom.html" class="nav-button">United Kingdom</a>
+      <a href="./global.html" class="nav-button">Global</a>
   </div>
 </div>
 
                 <a href="./publications.html" class="nav-button">PUBLICATIONS</a>
-                <a href="mailto:joelangley@email.com" class="nav-button">CONTACT</a>
+                <a href="mailto:jfl49@cam.ac.uk" class="nav-button">CONTACT</a>
             </div>
 
             <div class="main-image">
