--- a/index.html
+++ b/index.html
@@ -23,10 +23,6 @@
                 <!-- Projects main button -->
 <a href="#" id="projects-button" class="nav-button">PROJECTS</a>
 <div class="dropdown" id="projects-dropdown">
-
-  <!-- Places subheading -->
-  <a href="#" id="places-button" class="nav-button">PLACES</a>
-  <div class="dropdown" id="places-dropdown">
       <a href="./south_africa.html" class="nav-button">South Africa</a>
       <a href="./madagascar.html" class="nav-button">Madagascar</a>
       <a href="./congo.html" class="nav-button">Congo Basin</a>
@@ -34,8 +30,11 @@
       <a href="./sierra_leone.html" class="nav-button">Sierra Leone</a>
       <a href="./united_kingdom.html" class="nav-button">United Kingdom</a>
       <a href="./global.html" class="nav-button">Global</a>
-  </div>
 </div>
+</div>
+ <!-- Places subheading -->
+  <!-- <a href="#" id="places-button" class="nav-button">PLACES</a> -->
+   <!-- <div class="dropdown" id="places-dropdown"> -->
 
                 <a href="./publications.html" class="nav-button">PUBLICATIONS</a>
                 <a href="mailto:jfl49@cam.ac.uk" class="nav-button">CONTACT</a>
