--- a/index.html
+++ b/index.html
@@ -16,32 +16,38 @@
         </header>
 
         <div class="centre">
-            <!-- Navigation -->
-            <nav class="centre-left">
+            <div class="centre-left">
                 <a href="./index.html" class="nav-button">HOME</a>
                 <a href="./about.html" class="nav-button">ABOUT</a>
 
-                <!-- Projects dropdown -->
-                <a href="#" id="projects-button" class="nav-button">PROJECTS</a>
-                <div class="dropdown" id="projects-dropdown">
-                    <a href="./south_africa.html" class="nav-button">South Africa</a>
-                    <a href="./madagascar.html" class="nav-button">Madagascar</a>
-                    <a href="./congo.html" class="nav-button">Congo Basin</a>
-                    <a href="./ethiopia.html" class="nav-button">Ethiopia</a>
-                    <a href="./sierra_leone.html" class="nav-button">Sierra Leone</a>
-                    <a href="./united_kingdom.html" class="nav-button">United Kingdom</a>
-                    <a href="./global.html" class="nav-button">Global</a>
-                </div>
+                <!-- Projects main button -->
+<a href="#" id="projects-button" class="nav-button">PROJECTS</a>
+<div class="dropdown" id="projects-dropdown">
+      <a href="./south_africa.html" class="nav-button">South Africa</a>
+      <a href="./madagascar.html" class="nav-button">Madagascar</a>
+      <a href="./congo.html" class="nav-button">Congo Basin</a>
+      <a href="./ethiopia.html" class="nav-button">Ethiopia</a>
+      <a href="./sierra_leone.html" class="nav-button">Sierra Leone</a>
+      <a href="./united_kingdom.html" class="nav-button">United Kingdom</a>
+      <a href="./global.html" class="nav-button">Global</a>
+</div>
+
+ <!-- Places subheading -->
+  <!-- <a href="#" id="places-button" class="nav-button">PLACES</a> -->
+   <!-- <div class="dropdown" id="places-dropdown"> -->
 
                 <a href="./publications.html" class="nav-button">PUBLICATIONS</a>
                 <a href="mailto:jfl49@cam.ac.uk" class="nav-button">CONTACT</a>
-            </nav>
-
-            <!-- Main image + dots -->
-            <div class="main-image">
-                <img id="slideshow" src="./photos/elephants1.png" alt="Slideshow image">
-                <div class="dots" id="dots"></div>
             </div>
+
+            <div class="main-image">
+    <img id="slideshow" src="./photos/elephants1.png" alt="Slideshow image">
+        </div>
+
+<div class="dots" id="dots">
+    <!-- dots will be added here by JS -->
+</div>
+
         </div>
         
         <footer class="footer">
@@ -52,4 +58,3 @@
     <script src="./index.js"></script>   
 </body>
 </html>
-
