--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
         <div class="centre">
             <div class="centre-left">
                 <a href="./index.html" class="nav-button">HOME</a>
-                <a href="./about.html" class="nav-button">ABOUT</a>
+                <a href="./about.html" class="nav-button-active">ABOUT</a>
 
                 <!-- Projects main button -->
                 <a href="#" id="projects-button" class="nav-button">PROJECTS</a>
@@ -38,7 +38,6 @@
 
             <!-- Main content for About page -->
             <div class="main-content">
-                <h2>About</h2>
                 <p>
                     I am a conservation scientist and PhD candidate at the University of Cambridge, 
                     researching how to reconcile biodiversity conservation with the needs of human communities.
