--- a/about.html
+++ b/about.html
@@ -52,3 +52,9 @@
                     to conservation and research projects in Sierra Leone, Ethiopia, Madagascar, and the UK.
 
                 </p>
+            </div>
+        </div>
+
+        <script src="./index.js"></script>
+</body>
+</html>
