--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="app">
         <header class="header"> 
             <h1>Joe F. Langley</h1>
+            <img src="./photos/profile_pic.png" alt="Joe Langley" class="profile-pic">
         </header>
 
         <div class="centre">
