--- a/south_africa.html
+++ b/south_africa.html
@@ -23,7 +23,7 @@
 
                 <!-- Projects main button -->
                 <a href="#" id="projects-button" class="nav-button">PROJECTS</a>
-                <div class="dropdown" id="projects-dropdown">
+                <div class="dropdown-active" id="projects-dropdown">
                     <a href="./south_africa.html" class="nav-button-active">South Africa</a>
                     <a href="./madagascar.html" class="nav-button">Madagascar</a>
                     <a href="./congo.html" class="nav-button">Congo Basin</a>
