--- a/index.html
+++ b/index.html
@@ -11,10 +11,27 @@
 </head>
 <body>
     <div class="app">
-        <header class="header"> 
+    <header class="header"> 
+        <div class="header-left">
             <img src="./photos/profile_pic.png" alt="Joe Langley" class="profile-pic">
             <h1>Joe F. Langley</h1>
-        </header>
+        </div>
+
+        <div class="header-right">
+            <a href="https://twitter.com/yourhandle" target="_blank">
+                <img src="./icons/x-icon.png" alt="X" class="social-icon">
+            </a>
+            <a href="https://blueskyweb.xyz/yourhandle" target="_blank">
+                <img src="./icons/bluesky.png" alt="Bluesky" class="social-icon">
+            </a>
+            <a href="https://www.instagram.com/yourhandle" target="_blank">
+                <img src="./icons/instagram.png" alt="Instagram" class="social-icon">
+            </a>
+            <a href="https://orcid.org/your-orcid" target="_blank">
+                <img src="./icons/orcid.png" alt="ORCID" class="social-icon">
+            </a>
+        </div>
+    </header>
 
         <div class="centre">
             <div class="centre-left">
