--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
             <a href="https://twitter.com/yourhandle" target="_blank">
                 <img src="./icons/x-icon.png" alt="X" class="social-icon">
             </a>
-            <a href="https://blueskyweb.xyz/yourhandle" target="_blank">
-                <img src="./icons/bluesky.png" alt="Bluesky" class="social-icon">
+            <a href="https://bsky.app/profile/joelangley9.bsky.social" target="_blank">
+                <img src="./photos/bluesky.svg" alt="Bluesky" class="social-icon">
             </a>
             <a href="https://www.instagram.com/yourhandle" target="_blank">
                 <img src="./icons/instagram.png" alt="Instagram" class="social-icon">
             </a>
-            <a href="https://orcid.org/your-orcid" target="_blank">
-                <img src="./icons/orcid.png" alt="ORCID" class="social-icon">
+            <a href="https://orcid.org/0009-0005-9686-6128" target="_blank">
+                <img src="./photos/mmm.png" alt="ORCID" class="social-icon">
             </a>
         </div>
     </header>
