--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
         </div>
 
         <div class="header-right">
-            <a href="https://twitter.com/yourhandle" target="_blank">
-                <img src="./icons/x-icon.png" alt="X" class="social-icon">
+            <a href="https://x.com/joe_langley9" target="_blank">
+                <img src="./icons/twitter.jpg" alt="X" class="social-icon">
             </a>
             <a href="https://bsky.app/profile/joelangley9.bsky.social" target="_blank">
                 <img src="./photos/bluesky.svg" alt="Bluesky" class="social-icon">
             </a>
-            <a href="https://www.instagram.com/yourhandle" target="_blank">
+            <a href="https://www.instagram.com/joelangley_wildlife/" target="_blank">
                 <img src="./icons/instagram.png" alt="Instagram" class="social-icon">
             </a>
             <a href="https://orcid.org/0009-0005-9686-6128" target="_blank">
-                <img src="./photos/mmm.png" alt="ORCID" class="social-icon">
+                <img src="./photos/orcid.svg" alt="ORCID" class="social-icon">
             </a>
         </div>
     </header>
