--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 
         <div class="header-right">
             <a href="https://x.com/joe_langley9" target="_blank">
-                <img src="./icons/twitter.jpg" alt="X" class="social-icon">
+                <img src="./photos/twitter.jpg" alt="X" class="social-icon">
             </a>
             <a href="https://bsky.app/profile/joelangley9.bsky.social" target="_blank">
                 <img src="./photos/bluesky.svg" alt="Bluesky" class="social-icon">
             </a>
             <a href="https://www.instagram.com/joelangley_wildlife/" target="_blank">
-                <img src="./icons/instagram.png" alt="Instagram" class="social-icon">
+                <img src="./photos/instagram.png" alt="Instagram" class="social-icon">
             </a>
             <a href="https://orcid.org/0009-0005-9686-6128" target="_blank">
                 <img src="./photos/orcid.svg" alt="ORCID" class="social-icon">
