--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <div class="header-right">
             <a href="https://x.com/joe_langley9" target="_blank">
-                <img src="./photos/twitter.jpg" alt="X" class="social-icon">
+                <img src="./photos/twitter.svg" alt="X" class="social-icon">
             </a>
             <a href="https://bsky.app/profile/joelangley9.bsky.social" target="_blank">
                 <img src="./photos/bluesky.svg" alt="Bluesky" class="social-icon">
