--- a/united_kingdom.html
+++ b/united_kingdom.html
@@ -11,10 +11,27 @@
 </head>
 <body>
     <div class="app">
-        <header class="header"> 
+    <header class="header"> 
+        <div class="header-left">
             <img src="./photos/profile_pic.png" alt="Joe Langley" class="profile-pic">
             <h1>Joe F. Langley</h1>
-        </header>
+        </div>
+
+        <div class="header-right">
+            <a href="https://x.com/joe_langley9" target="_blank">
+                <img src="./photos/twitter.svg" alt="X" class="social-icon">
+            </a>
+            <a href="https://bsky.app/profile/joelangley9.bsky.social" target="_blank">
+                <img src="./photos/bluesky.svg" alt="Bluesky" class="social-icon">
+            </a>
+            <a href="https://www.instagram.com/joelangley_wildlife/" target="_blank">
+                <img src="./photos/instagram.png" alt="Instagram" class="social-icon">
+            </a>
+            <a href="https://orcid.org/0009-0005-9686-6128" target="_blank">
+                <img src="./photos/orcid.svg" alt="ORCID" class="social-icon">
+            </a>
+        </div>
+    </header>
 
         <div class="centre">
             <div class="centre-left">
