--- a/congo.html
+++ b/congo.html
@@ -54,6 +54,12 @@
                 <a href="mailto:jfl49@cam.ac.uk" class="nav-button">CONTACT</a>
             </div>
 
+            <div class="sub-image-landscape">
+    <img id="slideshow-congo" src="./photos/congo_tent.png" alt="Slideshow image">
+        </div>
+
+<div class="dots" id="dots">
+
             <!-- Main content for project subsection page -->
             <div class="main-content">
                 <p>
