--- a/congo.html
+++ b/congo.html
@@ -55,10 +55,8 @@
             </div>
 
             <div class="sub-image-landscape">
-    <img id="slideshow-congo" src="./photos/congo_tent.png" alt="Slideshow image">
+    <img id=".photos/congo_tent.png" alt="Tent">
         </div>
-
-<div class="dots" id="dots">
 
             <!-- Main content for project subsection page -->
             <div class="main-content">
