--- a/congo.html
+++ b/congo.html
@@ -55,8 +55,9 @@
             </div>
 
             <div class="sub-image-landscape">
-    <img id=".photos/congo_tent.png" alt="Tent">
-        </div>
+      <img src="./photos/congo_tent.png" alt="Tent">
+            </div>
+
 
             <!-- Main content for project subsection page -->
             <div class="main-content">
