--- a/congo.html
+++ b/congo.html
@@ -54,7 +54,7 @@
                 <a href="mailto:jfl49@cam.ac.uk" class="nav-button">CONTACT</a>
             </div>
 
-            <div class="sub-image-landscape">
+            <div class="main-image">
       <img src="./photos/congo_tent.png" alt="Tent">
             </div>
 
