--- a/index.html
+++ b/index.html
@@ -11,12 +11,17 @@
 </head>
 <body>
     <div class="app">
-    <header class="header"> 
-        <div class="header-left">
-            <img src="./photos/profile_pic.png" alt="Joe Langley" class="profile-pic">
-            <h1>Joe F. Langley</h1>
-        </div>
-
+  <header class="header"> 
+    <div class="header-left">
+      <img src="./photos/profile_pic.png" alt="Joe Langley" class="profile-pic">
+      <div class="title-block">
+        <h1 id="typewriter-name"></h1>
+        <h2 id="typewriter-subtitle"></h2>
+      </div>
+    </div>
+  </header>
+</div>        
+    
         <div class="header-right">
             <a href="https://x.com/joe_langley9" target="_blank">
                 <img src="./photos/twitter.svg" alt="X" class="social-icon">
