--- a/index.html
+++ b/index.html
@@ -11,32 +11,33 @@
 </head>
 <body>
     <div class="app">
-  <header class="header"> 
-    <div class="header-left">
-      <img src="./photos/profile_pic.png" alt="Joe Langley" class="profile-pic">
-      <div class="title-block">
-        <h1 id="typewriter-name"></h1>
-        <h2 id="typewriter-subtitle"></h2>
-      </div>
+  <header class="header">
+  <div class="header-left">
+    <img src="./photos/profile_pic.png" alt="Joe Langley" class="profile-pic">
+
+    <!-- title-block: stacked name + subtitle -->
+    <div class="title-block">
+      <h1 id="typewriter-name" class="typewriter-line"></h1>
+      <h2 id="typewriter-subtitle" class="typewriter-line"></h2>
     </div>
-  </header>
-</div>        
-    
-        <div class="header-right">
-            <a href="https://x.com/joe_langley9" target="_blank">
-                <img src="./photos/twitter.svg" alt="X" class="social-icon">
-            </a>
-            <a href="https://bsky.app/profile/joelangley9.bsky.social" target="_blank">
-                <img src="./photos/bluesky.svg" alt="Bluesky" class="social-icon">
-            </a>
-            <a href="https://www.instagram.com/joelangley_wildlife/" target="_blank">
-                <img src="./photos/instagram.png" alt="Instagram" class="social-icon">
-            </a>
-            <a href="https://orcid.org/0009-0005-9686-6128" target="_blank">
-                <img src="./photos/orcid.svg" alt="ORCID" class="social-icon">
-            </a>
-        </div>
-    </header>
+  </div>
+
+  <!-- header-right must be INSIDE the header (so it stays aligned) -->
+  <div class="header-right">
+    <a href="https://x.com/joe_langley9" target="_blank">
+      <img src="./photos/twitter.svg" alt="X" class="social-icon">
+    </a>
+    <a href="https://bsky.app/profile/joelangley9.bsky.social" target="_blank">
+      <img src="./photos/bluesky.svg" alt="Bluesky" class="social-icon">
+    </a>
+    <a href="https://www.instagram.com/joelangley_wildlife/" target="_blank">
+      <img src="./photos/instagram.png" alt="Instagram" class="social-icon">
+    </a>
+    <a href="https://orcid.org/0009-0005-9686-6128" target="_blank">
+      <img src="./photos/orcid.svg" alt="ORCID" class="social-icon">
+    </a>
+  </div>
+</header>
 
         <div class="centre">
             <div class="centre-left">
