--- a/about.html
+++ b/about.html
@@ -12,10 +12,13 @@
 <body>
     <div class="app">
     <header class="header"> 
-        <div class="header-left">
-            <img src="./photos/profile_pic.png" alt="Joe Langley" class="profile-pic">
-            <h1>Joe F. Langley</h1>
-        </div>
+  <div class="header-left">
+    <img src="./photos/profile_pic.png" alt="Joe Langley" class="profile-pic">
+    <div class="title-block">
+      <h1 id="typewriter-name">Joe F. Langley</h1>
+      <h2 id="typewriter-subtitle">Conservation Scientist</h2>
+    </div>
+  </div>
 
         <div class="header-right">
             <a href="https://x.com/joe_langley9" target="_blank">
